--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: objective-c
 osx_image: xcode10.2
-xcode_project: DatePicker # path to your xcodeproj folder
+xcode_project: DatePicker.xcodeproj # path to your xcodeproj folder
 xcode_scheme: DatePicker
+# xcode_scheme: DatePickerTest
 xcode_destination: platform=iOS Simulator,OS=10.1,name=iPad Pro (9.7-inch)
 
 # http://docs.travis-ci.com/user/languages/objective-c/
+
